Pretty formatted all articles and made Ryūsei Shogunate's article citable

--- a/src/en/cupertino_kurt.mdx
+++ b/src/en/cupertino_kurt.mdx
@@ -4,27 +4,28 @@ title: "Cupertino Kurt"
 short_description: "Player of Interest"
 ---
 
-**Cupertino von Kurt**, or **Cupertino Kurt**, is a Waydinean politician, serving as Prime Minister 
-since October, 2022. A member of the [Social Democrats](Social_Democrats_(Waydines)) party, he was previously 
-king of [Waydines](Waydines) during the imperial period, president in the First Republic, and elected 
-twice as Prime Minister in the [Second Republic](Second_Republic_of_Waydines). He is also a 
-programmer, writer, historian, and theologian serving as a presbyter in the [Kibosaki](Kibosaki) 
-presbytery of the [Church of Made](Madeism).
+**Cupertino von Kurt**, or **Cupertino Kurt**, is a Waydinean politician, serving as Prime Minister
+since October, 2022. A member of the [Social Democrats](<Social_Democrats_(Waydines)>) party, he was
+previously king of [Waydines](Waydines) during the imperial period, president in the First Republic,
+and elected twice as Prime Minister in the [Second Republic](Second_Republic_of_Waydines). He is
+also a programmer, writer, historian, and theologian serving as a presbyter in the
+[Kibosaki](Kibosaki) presbytery of the [Church of Made](Madeism).
+
 <QuickFacts title="Cupertino von Kurt">
     <tr>
         <td colSpan="2">
-            <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1742054620/cuper_sanref.png" height="14rem" centered={true}/>
+            <Picture
+                image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1742054620/cuper_sanref.png"
+                height="14rem"
+                centered={true}
+            />
         </td>
     </tr>
     <tr>
         <td colSpan="2" class="text-center">
             <ul class="">
-                <li>
-                    Prime Minister of [Waydines](Waydines)
-                </li>
-                <li style="font-weight: 400">
-                    October 20, 2022 &mdash; Present
-                </li>
+                <li>Prime Minister of [Waydines](Waydines)</li>
+                <li style="font-weight: 400">October 20, 2022 &mdash; Present</li>
             </ul>
         </td>
     </tr>
@@ -47,7 +48,7 @@ presbytery of the [Church of Made](Madeism).
     <tr>
         <td>Signature</td>
         <td>
-            <img src="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741914212/signaturekurt_bzirt2.svg"/>
+            <img src="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741914212/signaturekurt_bzirt2.svg" />
         </td>
     </tr>
     <tr>
@@ -57,16 +58,17 @@ presbytery of the [Church of Made](Madeism).
 </QuickFacts>
 
 # Government
-As Prime Minister, Cupertino led the Constituent Assembly of Waydines, playing a fundamental role in 
-drafting the new National Constitution, considered the most democratic in the world. His government 
-has been characterized by the strengthening of civil rights and the creation of various basic laws 
-for establishing Waydines as an organized and republican country. Although he was a controversial 
-figure in the past, especially during the period of the [Second Republic](Second_Republic_of_Waydines), 
-he is currently well-regarded by the people due to the stability and institutional advances promoted 
-during his administration.
 
-His government has distinguished itself in diplomacy, promoting peace and global cooperation. Thanks 
-to his unparalleled diplomatic skill, Waydines has become one of the most peaceful countries in the 
-world. He fostered the formation of international organizations for peace, such as the [Red Crescent](Red_Crescent) 
-and the [Forum of Nations](Forum_of_Nations); as well as alliances, treaties, and pacts like the 
-[Elysian Union](Elysian_Union) and the [Solar Pact](Solar_Pact).
+As Prime Minister, Cupertino led the Constituent Assembly of Waydines, playing a fundamental role in
+drafting the new National Constitution, considered the most democratic in the world. His government
+has been characterized by the strengthening of civil rights and the creation of various basic laws
+for establishing Waydines as an organized and republican country. Although he was a controversial
+figure in the past, especially during the period of the
+[Second Republic](Second_Republic_of_Waydines), he is currently well-regarded by the people due to
+the stability and institutional advances promoted during his administration.
+
+His government has distinguished itself in diplomacy, promoting peace and global cooperation. Thanks
+to his unparalleled diplomatic skill, Waydines has become one of the most peaceful countries in the
+world. He fostered the formation of international organizations for peace, such as the
+[Red Crescent](Red_Crescent) and the [Forum of Nations](Forum_of_Nations); as well as alliances,
+treaties, and pacts like the [Elysian Union](Elysian_Union) and the [Solar Pact](Solar_Pact).
