--- a/src/en/ryusei_shogunate.mdx
+++ b/src/en/ryusei_shogunate.mdx
@@ -11,7 +11,7 @@ the continent of [Elysium](Elysium). It is a [feudal](https://en.wikipedia.org/w
 of [shogun](https://en.wikipedia.org/wiki/Shogun) [Niszara](Niszara_Ryūsei), leader of the Ryūsei
 dynasty. Its capital is the city of Tenshikyo.
 
-<QuickFacts title="Xogunato Ryūsei" subtitle="流星幕府">
+<QuickFacts title="Ryūsei Shogunate" subtitle="流星幕府">
     <CountrySymbols
         flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1748199127/ryuseiflag_cwz57b.svg"
         coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1748199127/ryusei_kllwlj.svg"
