--- a/src/pt/braviary.mdx
+++ b/src/pt/braviary.mdx
@@ -6,16 +6,21 @@ short_description: "Animal Notório"
 
 > KA-KAW!
 
-**Braviary** é uma [águia-de-cabeça-branca](https://pt.wikipedia.org/wiki/Águia-de-cabeça-branca) 
-(_Haliaeetus leucocephalus_) e a companhia mais leal de José Arcadio Morales ([Yharo](Yharo)). Conhecido
-por sua inteligência e força, Braviary é muitas vezes visto sobrevoando pelos céus, executando manobras
-aéreas precisas às ordens de seu dono. Não somente um animal de estimação, Braviary serve como 
-olheiro e guardião, provando sua utilidade tanto no _dia a dia_ quanto em situações de combate.
+**Braviary** é uma [águia-de-cabeça-branca](https://pt.wikipedia.org/wiki/Águia-de-cabeça-branca)
+(_Haliaeetus leucocephalus_) e a companhia mais leal de José Arcadio Morales ([Yharo](Yharo)).
+Conhecido por sua inteligência e força, Braviary é muitas vezes visto sobrevoando pelos céus,
+executando manobras aéreas precisas às ordens de seu dono. Não somente um animal de estimação,
+Braviary serve como olheiro e guardião, provando sua utilidade tanto no _dia a dia_ quanto em
+situações de combate.
 
 <QuickFacts title="Braviary">
     <tr>
         <td colSpan="2">
-            <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1743048776/4bdb49a4-cf16-4742-a889-b399e9cecfab.png" height="8rem" centered={true}/>
+            <Picture
+                image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1743048776/4bdb49a4-cf16-4742-a889-b399e9cecfab.png"
+                height="8rem"
+                centered={true}
+            />
         </td>
     </tr>
     <tr>
@@ -27,18 +32,26 @@ olheiro e guardião, provando sua utilidade tanto no _dia a dia_ quanto em situa
     <tr>
         <td>Cidadania</td>
         <td>
-            <CountryCitation country="Waydines"/>
+            <CountryCitation country="Waydines" />
         </td>
     </tr>
 </QuickFacts>
 
 # Etimologia
-Braviary, como outros animais domesticados por Yharo, foi nomeado com base em um Pokémon que compartilhasse 
-características similares à sua espécie. O nome se origina do Pokémon [Braviary](https://bulbapedia.bulbagarden.net/wiki/Braviary_(Pokémon)), 
-notório por sua braveza e forte conexão com seu treinador, assim como a águia de Yharo.
+
+Braviary, como outros animais domesticados por Yharo, foi nomeado com base em um Pokémon que
+compartilhasse características similares à sua espécie. O nome se origina do Pokémon
+[Braviary](<https://bulbapedia.bulbagarden.net/wiki/Braviary_(Pokémon)>), notório por sua braveza e
+forte conexão com seu treinador, assim como a águia de Yharo.
 
 # Fatos Interessantes
-- Braviary é o primeiro e único não-humano a obter um cartão de identificação em Waydines. Sua aprovação levou requerimentos mais rígidos a serem impostos no processo de admissão, impedindo futuros animais de receberem esse _status_.
-- Braviary defendeu e salvou Yharo em várias ocasiões, usando de sua afiada visão, velocidade e poderosas garras para intervir em situações de perigo.
-- Além do combate, Braviary é treinado em executar manobras aéreas complexas, demonstrando incomparável agilidade e inteligência.
-- Dentre os vários animais domesticados por Yharo, Braviary foi o quinto a ser domesticado e treinado.
+
+-   Braviary é o primeiro e único não-humano a obter um cartão de identificação em Waydines. Sua
+    aprovação levou requerimentos mais rígidos a serem impostos no processo de admissão, impedindo
+    futuros animais de receberem esse _status_.
+-   Braviary defendeu e salvou Yharo em várias ocasiões, usando de sua afiada visão, velocidade e
+    poderosas garras para intervir em situações de perigo.
+-   Além do combate, Braviary é treinado em executar manobras aéreas complexas, demonstrando
+    incomparável agilidade e inteligência.
+-   Dentre os vários animais domesticados por Yharo, Braviary foi o quinto a ser domesticado e
+    treinado.
