--- a/src/pt/delta_smp_3.mdx
+++ b/src/pt/delta_smp_3.mdx
@@ -5,17 +5,18 @@ short_description: "Servidor de Minecraft"
 snub: true
 ---
 
-Delta SMP 3 foi o terceiro servidor da franquia Delta SMP, foi um SMP igual aos anteriores e foi o 
-primeiro a obter uma comunidade real, tendo a participação de pessoas como Tenp10tion, Anni, [Shazy](Shazy), 
-[Banumuru](Banumuru), [Ray](Ray), etc. Este foi o primeiro servidor a ser hosteado no computador novo 
-de [Cupertino](Cupertino), logo, houve melhor performance, com o lado ruim de não poder abrir sempre, 
-porém isso pouco influenciou no sucesso do servidor, que durou por 1 mês.
+Delta SMP 3 foi o terceiro servidor da franquia Delta SMP, foi um SMP igual aos anteriores e foi o
+primeiro a obter uma comunidade real, tendo a participação de pessoas como Tenp10tion, Anni,
+[Shazy](Shazy), [Banumuru](Banumuru), [Ray](Ray), etc. Este foi o primeiro servidor a ser hosteado
+no computador novo de [Cupertino](Cupertino), logo, houve melhor performance, com o lado ruim de não
+poder abrir sempre, porém isso pouco influenciou no sucesso do servidor, que durou por 1 mês.
 
 Os players &mdash; Tenp10tion, Ray e Kid &mdash; fizeram suas bases, como Rockatanskiy, Jabaquara do
-Sul e [Hillpath](Hillpath), respectivamente. Porém apenas um país foi criado, sendo ele [Waydines](Waydines).
+Sul e [Hillpath](Hillpath), respectivamente. Porém apenas um país foi criado, sendo ele
+[Waydines](Waydines).
 
-O servidor terminou após Cupertino ter feito testes com partições de disco em seu Linux, o que causou o 
-servidor a ser completamente apagado.
+O servidor terminou após Cupertino ter feito testes com partições de disco em seu Linux, o que
+causou o servidor a ser completamente apagado.
 
 <QuickFacts title="Delta SMP 3">
     <tr>
@@ -49,22 +50,39 @@ servidor a ser completamente apagado.
 </QuickFacts>
 
 # Eventos
+
 Houveram três principais eventos no Delta SMP 3, sendo eles:
 
-- Venda do terreno de Mitterfurt para Kid, que estabeleceu Hillpath no lugar;
+-   Venda do terreno de Mitterfurt para Kid, que estabeleceu Hillpath no lugar;
 
-- Testes com armas nucleares, que foram primeiramente conceitualizadas por [Wolfi Hraje](Wolfi_Hraje);
+-   Testes com armas nucleares, que foram primeiramente conceitualizadas por
+    [Wolfi Hraje](Wolfi_Hraje);
 
-- Segunda construção do [WTC](World_Trade_Center);
+-   Segunda construção do [WTC](World_Trade_Center);
 
 # Galeria
-<div class="flex flex-col gallery gap-2 w-full">
-    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910405/2022-01-17_20.26.58_y4tbz5.png"/>
-    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910441/2022-01-27_23.58.30_uvpm3u.png" alt="Loja de Ravi"/>
-    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910455/2022-01-28_21.33.14_zilrsa.png"/>
-    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910851/2022-01-30_23.43.08_xcluk8.png" alt="Kid após comprar o terreno de Mitterfurt"/>
-    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910858/2022-01-31_03.14.59_zjtmot.png" alt="Novo local de Mitterfurt"/>
-    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910860/2022-02-02_23.28.31_ogiovs.png" alt="Mapa do Delta SMP 3"/>
-    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910884/2022-02-06_01.07.09_vlwolh.png" alt="Mapa do novo local de Mitterfurt com Rockatanskiy no canto inferior direito"/>
-</div>
 
+<div class="flex flex-col gallery gap-2 w-full">
+    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910405/2022-01-17_20.26.58_y4tbz5.png" />
+    <img
+        src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910441/2022-01-27_23.58.30_uvpm3u.png"
+        alt="Loja de Ravi"
+    />
+    <img src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910455/2022-01-28_21.33.14_zilrsa.png" />
+    <img
+        src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910851/2022-01-30_23.43.08_xcluk8.png"
+        alt="Kid após comprar o terreno de Mitterfurt"
+    />
+    <img
+        src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910858/2022-01-31_03.14.59_zjtmot.png"
+        alt="Novo local de Mitterfurt"
+    />
+    <img
+        src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910860/2022-02-02_23.28.31_ogiovs.png"
+        alt="Mapa do Delta SMP 3"
+    />
+    <img
+        src="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1741910884/2022-02-06_01.07.09_vlwolh.png"
+        alt="Mapa do novo local de Mitterfurt com Rockatanskiy no canto inferior direito"
+    />
+</div>
