--- a/src/pt/kibosaki.mdx
+++ b/src/pt/kibosaki.mdx
@@ -46,14 +46,19 @@ funcionando como [enclave](https://pt.wikipedia.org/wiki/Enclave)
     </tr>
     <tr>
         <td>Idioma litúrgico</td>
-        <td><a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_japonesa">Japonês</a></td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_japonesa">Japonês</a>
+        </td>
     </tr>
     <tr>
         <td>Governo</td>
         <td>
             <a href="https://pt.wikipedia.org/wiki/Teocracia">Teocracia</a>
             <a href="Madeísmo">madeísta</a>
-            <a href="https://pt.wikipedia.org/wiki/S%C3%ADnodo">sinodal</a>-<a href="https://pt.wikipedia.org/wiki/Presbit%C3%A9rio_(protestantismo)">presbiteriana</a>
+            <a href="https://pt.wikipedia.org/wiki/S%C3%ADnodo">sinodal</a>-
+            <a href="https://pt.wikipedia.org/wiki/Presbit%C3%A9rio_(protestantismo)">
+                presbiteriana
+            </a>
         </td>
     </tr>
     <tr class="small">
