--- a/src/pt/uniao_elisiana.mdx
+++ b/src/pt/uniao_elisiana.mdx
@@ -5,25 +5,41 @@ short_description: "União política e econômica supranacional"
 banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1745712785/Uni%C3%A3o_Elisiana_p1v2xk.svg"
 ---
 
-A **União Elisiana** é uma [união política](https://pt.wikipedia.org/wiki/Uni%C3%A3o_pol%C3%ADtica) 
-e [econômica](https://pt.wikipedia.org/wiki/Bloco_comercial) [supranacional](https://pt.wikipedia.org/wiki/Supranacionalismo) 
-com 3 países-membros localizados principalmente no continente de [Elísia](Elísia). A união tem uma 
-população estimada de cerca de 30 habitantes (2024). A União Elisiana se descreve oficialmente como
-uma [confederação](https://pt.wikipedia.org/wiki/Confedera%C3%A7%C3%A3o).
+A **União Elisiana** é uma [união política](https://pt.wikipedia.org/wiki/Uni%C3%A3o_pol%C3%ADtica)
+e [econômica](https://pt.wikipedia.org/wiki/Bloco_comercial)
+[supranacional](https://pt.wikipedia.org/wiki/Supranacionalismo) com 3 países-membros localizados
+principalmente no continente de [Elísia](Elísia). A união tem uma população estimada de cerca de 30
+habitantes (2024). A União Elisiana se descreve oficialmente como uma
+[confederação](https://pt.wikipedia.org/wiki/Confedera%C3%A7%C3%A3o).
 
 <QuickFacts title="União Elisiana">
     <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1745712785/Uni%C3%A3o_Elisiana_p1v2xk.svg" />
     <tr>
         <td colspan="2">
-             <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1745712794/uniaoelisianamapa_bvkggg.png" description="Localização da União Elisiana (vermelho) em Elísia (verde)" height="16rem" centered={true}/>
+            <Picture
+                image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1745712794/uniaoelisianamapa_bvkggg.png"
+                description="Localização da União Elisiana (vermelho) em Elísia (verde)"
+                height="16rem"
+                centered={true}
+            />
         </td>
     </tr>
     <tr>
         <td>Capital</td>
         <td>
             <ul>
-                <li>Nenhuma <sub>(<i>de jure</i>)</sub></li>
-                <li><a href="Mitterfurt">Mitterfurt</a> <sub>(<i>de facto</i>)</sub></li>
+                <li>
+                    Nenhuma{" "}
+                    <sub>
+                        (<i>de jure</i>)
+                    </sub>
+                </li>
+                <li>
+                    <a href="Mitterfurt">Mitterfurt</a>{" "}
+                    <sub>
+                        (<i>de facto</i>)
+                    </sub>
+                </li>
             </ul>
         </td>
     </tr>
@@ -35,14 +51,21 @@ uma [confederação](https://pt.wikipedia.org/wiki/Confedera%C3%A7%C3%A3o).
     </tr>
     <tr>
         <td>Tipo</td>
-        <td><a href="https://pt.wikipedia.org/wiki/Uni%C3%A3o_continental">União continental</a> confederada</td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/Uni%C3%A3o_continental">União continental</a>{" "}
+            confederada
+        </td>
     </tr>
     <tr>
         <td>Membros</td>
         <td>
             <ul>
-                <li><CountryCitation country="Waydines" /></li>
-                <li>Xogunato Ryūsei</li>
+                <li>
+                    <CountryCitation country="Waydines" />
+                </li>
+                <li>
+                    <CountryCitation country="Xogunato Ryūsei" />
+                </li>
                 <li>Hoegaarden</li>
             </ul>
         </td>
@@ -51,22 +74,34 @@ uma [confederação](https://pt.wikipedia.org/wiki/Confedera%C3%A7%C3%A3o).
         <td>Governo</td>
         <td>
             <a href="https://pt.wikipedia.org/wiki/Confedera%C3%A7%C3%A3o">Confederação</a>
-            <a href="https://pt.wikipedia.org/wiki/Supranacionalismo">supranacional</a> 
-            e intergovenamental
-            <a href="https://pt.wikipedia.org/wiki/Rep%C3%BAblica_parlamentarista">parlamentarista</a>
+            <a href="https://pt.wikipedia.org/wiki/Supranacionalismo">supranacional</a>e
+            intergovenamental
+            <a href="https://pt.wikipedia.org/wiki/Rep%C3%BAblica_parlamentarista">
+                parlamentarista
+            </a>
         </td>
     </tr>
     <tr>
         <td>Legislatura</td>
-        <td><a href="https://pt.wikipedia.org/wiki/Bicameralismo">Bicameral</a></td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/Bicameralismo">Bicameral</a>
+        </td>
     </tr>
     <tr class="small">
-        <td><a href="https://pt.wikipedia.org/wiki/C%C3%A2mara_baixa">Câmara Baixa</a></td>
-        <td><a href="Parlamento_Elisiano">Parlamento Elisiano</a></td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/C%C3%A2mara_baixa">Câmara Baixa</a>
+        </td>
+        <td>
+            <a href="Parlamento_Elisiano">Parlamento Elisiano</a>
+        </td>
     </tr>
     <tr class="small">
-        <td><a href="https://pt.wikipedia.org/wiki/C%C3%A2mara_alta">Câmara Alta</a></td>
-        <td><a href="Conselho_Elisiano">Conselho Elisiano</a></td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/C%C3%A2mara_alta">Câmara Alta</a>
+        </td>
+        <td>
+            <a href="Conselho_Elisiano">Conselho Elisiano</a>
+        </td>
     </tr>
     <tr>
         <td>Formação</td>
@@ -89,6 +124,8 @@ uma [confederação](https://pt.wikipedia.org/wiki/Confedera%C3%A7%C3%A3o).
     </tr>
     <tr>
         <td>Moeda</td>
-        <td><a href="Elísio">Elísio</a> (<code>ELS</code>)</td>
+        <td>
+            <a href="Elísio">Elísio</a> (<code>ELS</code>)
+        </td>
     </tr>
 </QuickFacts>
