--- a/src/en/madeism.mdx
+++ b/src/en/madeism.mdx
@@ -5,22 +5,37 @@ banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1743102381/37b16bf6-
 short_description: "Monotheistic religion"
 ---
 
-**Madeism** is a [monotheistic](https://en.wikipedia.org/wiki/Monotheism) religion that professes faith
-in the divinity of the person of [Made](Made), who is the Goddess creator of the universe and manifested 
-her deity through the prophets of the [Books of Setsuwa](Books_of_Setsuwa). Currently considered the 
-largest religion in the world, as a result of the fall of [Dorenism](Dorenism), composing more than half 
-of the world's population and being the majority religion in [Waydines](Waydines) and in the [Ryūsei Shogunate](Ryūsei_Shogunate).
+**Madeism** is a [monotheistic](https://en.wikipedia.org/wiki/Monotheism) religion that professes
+faith in the divinity of the person of [Made](Made), who is the Goddess creator of the universe and
+manifested her deity through the prophets of the [Books of Setsuwa](Books_of_Setsuwa). Currently
+considered the largest religion in the world, as a result of the fall of [Dorenism](Dorenism),
+composing more than half of the world's population and being the majority religion in
+[Waydines](Waydines) and in the [Ryūsei Shogunate](Ryūsei_Shogunate).
 
 <QuickFacts title="Church of Renewed Faith in Made">
     <tr>
         <td colSpan="2">
-            <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1743096448/churchofmade_nhozs4.svg" description="Church Logo" height="7rem" centered={true}/>
-            <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1743102381/37b16bf6-61cb-4fda-bb2a-3125bba702ba.png" description="Saint Sushi Basilica, Gremont" height="9rem" centered={true}/>
+            <Picture
+                image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1743096448/churchofmade_nhozs4.svg"
+                description="Church Logo"
+                height="7rem"
+                centered={true}
+            />
+            <Picture
+                image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1743102381/37b16bf6-61cb-4fda-bb2a-3125bba702ba.png"
+                description="Saint Sushi Basilica, Gremont"
+                height="9rem"
+                centered={true}
+            />
         </td>
     </tr>
     <tr>
-        <td><a href="https://en.wikipedia.org/wiki/Holy_book">Scriptures</a></td>
-        <td><a href="Books_of_Setsuwa">Books of Setsuwa</a></td>
+        <td>
+            <a href="https://en.wikipedia.org/wiki/Holy_book">Scriptures</a>
+        </td>
+        <td>
+            <a href="Books_of_Setsuwa">Books of Setsuwa</a>
+        </td>
     </tr>
     <tr>
         <td>Theology</td>
@@ -37,7 +52,7 @@ of the world's population and being the majority religion in [Waydines](Waydines
     <tr>
         <td>Headquarters</td>
         <td>
-            <a href="https://en.wikipedia.org/wiki/Synod">Synod</a> 
+            <a href="https://en.wikipedia.org/wiki/Synod">Synod</a>
             of <a href="Kibosaki">Kibosaki</a>
         </td>
     </tr>
@@ -45,7 +60,9 @@ of the world's population and being the majority religion in [Waydines](Waydines
         <td>Territory</td>
         <td>
             <ul>
-                <li><CountryCitation country="Waydines" /></li>
+                <li>
+                    <CountryCitation country="Waydines" />
+                </li>
                 <li>
                     <a href="Ryūsei_Shogunate">Ryūsei Shogunate</a>
                 </li>
@@ -55,15 +72,14 @@ of the world's population and being the majority religion in [Waydines](Waydines
     <tr>
         <td>Liturgical languages</td>
         <td>
-            Runic Proto-Japanese &centerdot; 
+            Runic Proto-Japanese &centerdot;
             <a href="https://en.wikipedia.org/wiki/Japanese_language">Japanese</a>
         </td>
     </tr>
     <tr>
         <td>Founders</td>
         <td>
-            <a href="Cupertino">Cupertino</a>, 
-            <a href="Anni">Anni</a> and 
+            <a href="Cupertino">Cupertino</a>,<a href="Anni">Anni</a> and
             <a href="Sushi">Sushi</a>
         </td>
     </tr>
@@ -88,115 +104,131 @@ of the world's population and being the majority religion in [Waydines](Waydines
 </QuickFacts>
 
 # History
-Madeism originated unexpectedly during a competitive event among the community that was part of the [EDG SMP](EDG_SMP). 
-Initially a phenomenon of fandom and humor, devotion to the figure of Made began to gain strength 
-among the participants. What started as a joke soon evolved into a deeper cultural identity, especially 
-with the rise of Waydinean nationalism in the Second Republic of Waydines.
 
-However, Madeism as it exists today was born only at the beginning of the Third Republic, when there 
-was a growing entry of Dorenist Church members into the servers. Dorenism was a previous religion, 
-highly organized, whose ecclesiastical structure was considered an element of [Osmarian](Osmaria) 
-cultural prestige. This organization caught the attention not only of Madeists but also of [Divinists](Divinism), 
-who decided to reform their religions to make them more structured and institutionalized.
+Madeism originated unexpectedly during a competitive event among the community that was part of the
+[EDG SMP](EDG_SMP). Initially a phenomenon of fandom and humor, devotion to the figure of Made began
+to gain strength among the participants. What started as a joke soon evolved into a deeper cultural
+identity, especially with the rise of Waydinean nationalism in the Second Republic of Waydines.
 
-Thus, Madeism adopted a [Presbyterian](https://en.wikipedia.org/wiki/Presbyterianism) structure, 
+However, Madeism as it exists today was born only at the beginning of the Third Republic, when there
+was a growing entry of Dorenist Church members into the servers. Dorenism was a previous religion,
+highly organized, whose ecclesiastical structure was considered an element of [Osmarian](Osmaria)
+cultural prestige. This organization caught the attention not only of Madeists but also of
+[Divinists](Divinism), who decided to reform their religions to make them more structured and
+institutionalized.
+
+Thus, Madeism adopted a [Presbyterian](https://en.wikipedia.org/wiki/Presbyterianism) structure,
 established the subdistrict of [Kibosaki](Kibosaki) as its religious center, and formed presbyteries
-and temples. The central [synod](https://en.wikipedia.org/wiki/Synod), the highest seat of Madeism, 
-was created to legislate on doctrines, culminating in the institution of the _Church of Renewed Faith in Made_.
+and temples. The central [synod](https://en.wikipedia.org/wiki/Synod), the highest seat of Madeism,
+was created to legislate on doctrines, culminating in the institution of the _Church of Renewed
+Faith in Made_.
 
-Today, Madeism stands as the largest religion since the fall of Dorenism as a result of most Dorenists
-having stopped playing.
+Today, Madeism stands as the largest religion since the fall of Dorenism as a result of most
+Dorenists having stopped playing.
 
 # Structure
 
 The Church of Renewed Faith in Made currently has an organized hierarchy as follows:
 
-**Pastors:** Responsible for temples and religious services. They are the ones who elect the presbyters 
-of their region.
+**Pastors:** Responsible for temples and religious services. They are the ones who elect the
+presbyters of their region.
 
-**Presbyters:** Form the presbytery and ensure adherence to the Confession of Faith. Only they can 
+**Presbyters:** Form the presbytery and ensure adherence to the Confession of Faith. Only they can
 serve in cathedrals and basilicas.
 
-**Synod of Kibosaki:** The supreme body, bringing together all presbyters to define religious legislation 
-and possible doctrinal changes.
+**Synod of Kibosaki:** The supreme body, bringing together all presbyters to define religious
+legislation and possible doctrinal changes.
 
 # Practices and Liturgies
+
 ## Communion
-The practice of eating rice during Madeist services dates back to the arduous journey of the Madeists 
-of the Han tribe to the Promised Land. Rice, as the grain that blessed Made in the waters of the golden 
-river, carries a profound symbolism of spiritual renewal and connection with the Goddess.
+
+The practice of eating rice during Madeist services dates back to the arduous journey of the
+Madeists of the Han tribe to the Promised Land. Rice, as the grain that blessed Made in the waters
+of the golden river, carries a profound symbolism of spiritual renewal and connection with the
+Goddess.
 
 > This grain, nurtured by the waters of my golden river, now carries my eternal blessing.
 
 _&mdash; `Engen; Canto X, Verse 32`_
 
-Rice is consumed in communion during services, as a symbol of unity and dedication to the faith, 
+Rice is consumed in communion during services, as a symbol of unity and dedication to the faith,
 reflecting the guarantee of fulfillment of promises between the Goddess and the faithful.
 
 ## Midnight Festival
-The Midnight Festival is a sacred event, inspired by the accounts in the Book of Engen, where the first 
-Madeists would observe the full moon as a special moment of divine revelation. During this event, the 
-faithful offer worship, perform offerings, and participate in purification rituals with light and fire, 
-symbols of the Goddess.
 
-With the reforms under the Covenant Kibo, the practice of holocausts was abolished, being replaced by 
-an act of charity: offering food to the needy, established in the Covenant of Keito. Today, the festival 
-is a moment of celebration and reflection, with a renewed emphasis on the spirit of communion and care 
-for others, according to the Covenants and the practice of offering blessed rice from the Covenant of Han.
+The Midnight Festival is a sacred event, inspired by the accounts in the Book of Engen, where the
+first Madeists would observe the full moon as a special moment of divine revelation. During this
+event, the faithful offer worship, perform offerings, and participate in purification rituals with
+light and fire, symbols of the Goddess.
+
+With the reforms under the Covenant Kibo, the practice of holocausts was abolished, being replaced
+by an act of charity: offering food to the needy, established in the Covenant of Keito. Today, the
+festival is a moment of celebration and reflection, with a renewed emphasis on the spirit of
+communion and care for others, according to the Covenants and the practice of offering blessed rice
+from the Covenant of Han.
 
 ## Lunar Calendar
-Madeism follows a [lunar calendar](https://en.wikipedia.org/wiki/Lunar_calendar), which is fundamental 
-to the organization of festivities and religious rituals, such as the Midnight Festival. The observation 
-of the [Moon's phases](https://en.wikipedia.org/wiki/Lunar_phase) guides the dates of celebrations 
-and is central to the spirituality of the faithful, as it reflects the natural cycles of life and 
-renewal.
 
-| Month | Japanese Name | Meaning |
-|-------|--------------|----------|
-| 1     | Tōka (灯火)   | Flame's light |
-| 2     | Kasei (風生)  | Wind's birth |
-| 3     | Tsuchi (土地) | Land |
-| 4     | Aoi (蒼い)    | Blue |
-| 5     | Kaoru (香る)  | Fragrance |
-| 6     | Yami (闇)     | Darkness |
-| 7     | Hikari (光)   | Light |
-| 8     | Shizuka (静か) | Silence |
-| 9     | Kage (影)     | Shadow |
-| 10    | Ame (雨)      | Rain |
-| 11    | Hōka (宝火)   | Precious fire |
-| 12    | Kōri (氷)     | Ice |
+Madeism follows a [lunar calendar](https://en.wikipedia.org/wiki/Lunar_calendar), which is
+fundamental to the organization of festivities and religious rituals, such as the Midnight Festival.
+The observation of the [Moon's phases](https://en.wikipedia.org/wiki/Lunar_phase) guides the dates
+of celebrations and is central to the spirituality of the faithful, as it reflects the natural
+cycles of life and renewal.
+
+| Month | Japanese Name  | Meaning       |
+| ----- | -------------- | ------------- |
+| 1     | Tōka (灯火)    | Flame's light |
+| 2     | Kasei (風生)   | Wind's birth  |
+| 3     | Tsuchi (土地)  | Land          |
+| 4     | Aoi (蒼い)     | Blue          |
+| 5     | Kaoru (香る)   | Fragrance     |
+| 6     | Yami (闇)      | Darkness      |
+| 7     | Hikari (光)    | Light         |
+| 8     | Shizuka (静か) | Silence       |
+| 9     | Kage (影)      | Shadow        |
+| 10    | Ame (雨)       | Rain          |
+| 11    | Hōka (宝火)    | Precious fire |
+| 12    | Kōri (氷)      | Ice           |
 
 # Scriptures
-The **Books of Setsuwa** form the sacred canon of Madeism and are considered the divine revelations 
-transmitted by the Goddess, through prophets and scribes. These scriptures cover teachings about love, 
-faith, worship of the Goddess, and laws that guide the lives of the faithful. Each book has a unique 
-structure, with chapters and verses, allowing for both public and personal reading.
+
+The **Books of Setsuwa** form the sacred canon of Madeism and are considered the divine revelations
+transmitted by the Goddess, through prophets and scribes. These scriptures cover teachings about
+love, faith, worship of the Goddess, and laws that guide the lives of the faithful. Each book has a
+unique structure, with chapters and verses, allowing for both public and personal reading.
 
 ## Canon
+
 ### Books of Instruction
-These books, written mainly by the prophet Kibo, are the backbone of Madeist teaching, addressing 
-morality, laws, and the history of the faith. They include accounts of personal experiences and 
+
+These books, written mainly by the prophet Kibo, are the backbone of Madeist teaching, addressing
+morality, laws, and the history of the faith. They include accounts of personal experiences and
 practices that the faithful should follow. The books in this category are:
 
-- **Engen** &mdash; `淵源`
-- **Chronicles of the Himekawa Family** &mdash; `姫川 年代記` (Written by Himekawa family scribes, but added to the canon to complement the historical context of _Itami_).
-- **Itami** &mdash; `痛み`
-- **Hōritsu** &mdash; `法律`
-- **Kyoka** &mdash; `許可`
+-   **Engen** &mdash; `淵源`
+-   **Chronicles of the Himekawa Family** &mdash; `姫川 年代記` (Written by Himekawa family scribes,
+    but added to the canon to complement the historical context of _Itami_).
+-   **Itami** &mdash; `痛み`
+-   **Hōritsu** &mdash; `法律`
+-   **Kyoka** &mdash; `許可`
 
-<br/>
+<br />
 
 ### Books of the New Prophets (or simply Prophets)
-These books contain the revelations of the most recent prophets, such as Decimus and Cupertino, and 
+
+These books contain the revelations of the most recent prophets, such as Decimus and Cupertino, and
 address deep themes about spiritual struggle and the birth of the Primitive Church, respectively.
 
-- **Decimus** &mdash; `デキムス`
-- **Kahoni** &mdash; `下土` (Also written by _Decimus_)
-- **Cupertino** &mdash; `クパチーノ`
+-   **Decimus** &mdash; `デキムス`
+-   **Kahoni** &mdash; `下土` (Also written by _Decimus_)
+-   **Cupertino** &mdash; `クパチーノ`
 
-<br/>
+<br />
 
 ### Eschatological Books
-This category contains the final prophecies about the world's destiny and the fulfillment of faith. 
+
+This category contains the final prophecies about the world's destiny and the fulfillment of faith.
 The only work that comprises this category is:
-- **Hyogikai Finalis** &mdash; `最終 評議会`
+
+-   **Hyogikai Finalis** &mdash; `最終 評議会`
