--- a/src/pt/elisianismo.mdx
+++ b/src/pt/elisianismo.mdx
@@ -5,5 +5,5 @@ short_description: "Favorecimento da integração elisiana"
 stub: true
 ---
 
-**Elisianismo**, ou **Pró-Elisianismo**, é uma posição política que favorece a integração político-social
-no continente [elisiano](Elísia) e a adesão à [União Elisiana](União_Elisiana).
+**Elisianismo**, ou **Pró-Elisianismo**, é uma posição política que favorece a integração
+político-social no continente [elisiano](Elísia) e a adesão à [União Elisiana](União_Elisiana).
