Added 'embed_image' field to the FrontMatter spec

--- a/src/pt/social_democratas_(waydines).mdx
+++ b/src/pt/social_democratas_(waydines).mdx
@@ -2,6 +2,7 @@
 id: "socdem"
 title: "Social Democratas (Waydines)"
 short_description: "Partido político waydineense"
+embed_image: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1741874088/socdemgu_gsphaz.webp"
 ---
 
 Os **Social Democratas** (SocDem ou SD) são um partido político de orientação
