Reformatted Frigustell's article and made minor fixes to Social Democrats' article

--- a/src/pt/social_democratas_(waydines).mdx
+++ b/src/pt/social_democratas_(waydines).mdx
@@ -8,9 +8,9 @@ embed_image: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1741874088/socd
 Os **Social Democratas** (SocDem ou SD) são um partido político de orientação
 [centrista](<https://pt.wikipedia.com/wiki/Centro_(pol%C3%ADtica)>) e
 [reformista](https://pt.wikipedia.org/wiki/Reformismo), fundado em 2023 em [Waydines](Waydines), no
-contexto da proclamação da Terceira República. Atualmente, exercem controle pleno sobre o governo
-parlamentar do país e desempenharam papel central na elaboração das novas instituições políticas e
-legais.
+contexto da proclamação da [Terceira República](Waydines#terceira-república-dias-de-hoje).
+Atualmente, exercem controle pleno sobre o governo parlamentar do país e desempenharam papel central
+na elaboração das novas instituições políticas e legais.
 
 <QuickFacts title="Social Democratas" partyColor="rgb(109, 27, 49)">
     <tr>
